@@ -163,7 +163,7 @@ public class JavaParser {
 }
 PARSER_END(JavaParser)
 TOKEN_MGR_DECLS : {
-    protected List<Token> formalComments = new ArrayList<Token>();
+    protected List<Comment> comments = new ArrayList<Comment>();
 
     private Map<Integer, String> excludeMap = new HashMap<Integer, String>();
     private String excludeMarker = PMD.EXCLUDE_MARKER;
@@ -191,6 +191,7 @@ SPECIAL_TOKEN :
         if (startOfNOPMD != -1) {
             excludeMap.put(matchedToken.beginLine, matchedToken.image.substring(startOfNOPMD + excludeMarker.length()));
         }
+        comments.add(new SingleLineComment(matchedToken));
     }
 }
 
@@ -206,13 +207,13 @@ MORE :
 <IN_FORMAL_COMMENT>
 SPECIAL_TOKEN :
 {
-  <FORMAL_COMMENT: "*/" > { formalComments.add(matchedToken); } : DEFAULT
+  <FORMAL_COMMENT: "*/" > { comments.add(new FormalComment(matchedToken)); } : DEFAULT
 }
 
 <IN_MULTI_LINE_COMMENT>
 SPECIAL_TOKEN :
 {
-  <MULTI_LINE_COMMENT: "*/" > : DEFAULT
+  <MULTI_LINE_COMMENT: "*/" > { comments.add(new MultiLineComment(matchedToken)); } : DEFAULT
 }
 
 <IN_FORMAL_COMMENT,IN_MULTI_LINE_COMMENT>
@@ -1079,7 +1080,7 @@ ASTCompilationUnit CompilationUnit() :
   ( < "~[]" > )?
   <EOF>
 {
- jjtThis.setFormalComments(token_source.formalComments);
+ jjtThis.setComments(token_source.comments);
  return jjtThis;
 }
 }
