@@ -18,14 +18,14 @@ public class ASTCompilationUnit extends SimpleJavaTypeNode implements Compilatio
         super(p, id);
     }
 
-    private List<Token> formalComments;
+    private List<Comment> comments;
 
-    public List<Token> getFormalComments() {
-        return formalComments;
+    public List<Comment> getComments() {
+        return comments;
     }
 
-    public void setFormalComments(List<Token> formalComments) {
-        this.formalComments = formalComments;
+    public void setComments(List<Comment> comments) {
+        this.comments = comments;
     }
 
     /**
