@@ -1,0 +1,9 @@
+package net.sourceforge.pmd.ast;
+
+public class SingleLineComment extends Comment {
+
+    public SingleLineComment(Token t) {
+        super(t);
+    }
+
+}
